@@ -1338,3 +1338,6 @@ reported radiance rather than XYZ values with Y in cd/m^2.
 Made it so ra_bmp only produces run-length encoded 8-bit output for
 grayscale images that are tone-mapped.  This minimizes circumstances
 under which output scanline order is reversed.
+
+Fixed bug in rcalc where it sometimes wasn't parsing the input format
+correctly.
